--- a/drehendz/package.json
+++ b/drehendz/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.2.0",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
@@ -22,6 +23,8 @@
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^8.2.0",
     "@ngrx/store-devtools": "^8.2.0",
+    "@reactivex/rxjs": "^5.0.0-beta.1",
+    "firebase": "^6.3.5",
     "g": "^2.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
