--- a/drehendz/package.json
+++ b/drehendz/package.json
@@ -29,6 +29,7 @@
     "firebase": "^6.3.5",
     "g": "^2.0.1",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
