change source to scss

--- a/drehendz/angular.json
+++ b/drehendz/angular.json
@@ -120,6 +120,12 @@
           }
         }
       }
-    }},
-  "defaultProject": "drehendz"
+    }
+  },
+  "defaultProject": "drehendz",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
