--- a/drehendz/package.json
+++ b/drehendz/package.json
@@ -29,6 +29,8 @@
     "firebase": "^6.3.5",
     "g": "^2.0.1",
     "geofire": "^5.0.1",
+    "ngx-owl-carousel": "^2.0.7",
+    "ngx-pagination": "^4.1.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.10.0",
