--- a/drehendz/package.json
+++ b/drehendz/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0",
     "@angular/animations": "~8.2.0",
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
@@ -25,10 +26,12 @@
     "@ngrx/store": "^8.2.0",
     "@ngrx/store-devtools": "^8.2.0",
     "@reactivex/rxjs": "^5.0.0-beta.1",
+    "angular-bootstrap-md": "^8.3.1",
     "angularfire2": "^5.2.1",
     "firebase": "^6.3.5",
     "g": "^2.0.1",
     "geofire": "^5.0.1",
+    "ngx-content-loading": "^0.1.3",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-pagination": "^4.1.0",
     "rxjs": "~6.4.0",
