--- a/drehendz/package.json
+++ b/drehendz/package.json
@@ -31,6 +31,8 @@
     "firebase": "^6.3.5",
     "g": "^2.0.1",
     "geofire": "^5.0.1",
+    "html2canvas": "^1.0.0-rc.5",
+    "jspdf": "^1.5.3",
     "ngx-content-loading": "^0.1.3",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-pagination": "^4.1.0",
