--- a/drehendz/package.json
+++ b/drehendz/package.json
@@ -12,13 +12,18 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0",
+    "@angular-devkit/architect": "^0.803.9",
+    "@angular-devkit/build-optimizer": "^0.803.9",
+    "@angular-devkit/schematics": "^8.3.9",
     "@angular/animations": "~8.2.0",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
     "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.2.0",
     "@angular/http": "^7.2.15",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
@@ -26,11 +31,15 @@
     "@ngrx/store": "^8.2.0",
     "@ngrx/store-devtools": "^8.2.0",
     "@reactivex/rxjs": "^5.0.0-beta.1",
+    "@schematics/angular": "^8.3.9",
+    "@schematics/update": "^0.803.9",
     "angular-bootstrap-md": "^8.3.1",
     "angularfire2": "^5.2.1",
+    "bootstrap": "^4.3.1",
     "firebase": "^6.3.5",
     "g": "^2.0.1",
     "geofire": "^5.0.1",
+    "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^1.5.3",
     "ngx-content-loading": "^0.1.3",
@@ -42,7 +51,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.802.0",
+    "@angular-devkit/build-angular": "^0.802.2",
     "@angular/cli": "~8.2.0",
     "@angular/compiler-cli": "~8.2.0",
     "@angular/language-service": "~8.2.0",
