--- a/drehendz/package.json
+++ b/drehendz/package.json
@@ -17,14 +17,14 @@
     "@angular-devkit/schematics": "^8.3.9",
     "@angular/animations": "~8.2.0",
     "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.2.0",
+    "@angular/common": "^8.2.10",
     "@angular/compiler": "~8.2.0",
-    "@angular/core": "~8.2.0",
+    "@angular/core": "^8.2.10",
     "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.2.0",
     "@angular/http": "^7.2.15",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.0",
+    "@angular/platform-browser": "^8.2.10",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "@ngrx/core": "^1.2.0",
@@ -36,6 +36,8 @@
     "angular-bootstrap-md": "^8.3.1",
     "angularfire2": "^5.2.1",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
+    "core-js": "^3.2.1",
     "firebase": "^6.3.5",
     "g": "^2.0.1",
     "geofire": "^5.0.1",
@@ -45,9 +47,14 @@
     "ngx-content-loading": "^0.1.3",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-pagination": "^4.1.0",
+    "ngx-toastr": "^11.1.0",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.2",
+    "tether": "^1.4.7",
+    "toastr-min": "^1.0.0",
     "tslib": "^1.10.0",
+    "web-webpack-plugin": "^4.6.6",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
