--- a/drehendz/package.json
+++ b/drehendz/package.json
@@ -39,6 +39,7 @@
     "chart.js": "^2.8.0",
     "core-js": "^3.2.1",
     "firebase": "^6.3.5",
+    "font-awesome": "^4.7.0",
     "g": "^2.0.1",
     "geofire": "^5.0.1",
     "hammerjs": "^2.0.8",
