--- a/drehendz/package.json
+++ b/drehendz/package.json
@@ -1,6 +1,6 @@
 {
   "name": "drehendz",
-  "version": "0.0.0",
+  "version": "1.2.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,6 +8,10 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+  },
+  "engines" :{
+    "node": "10.13.0",
+    "npm": "6.2.0"
   },
   "private": true,
   "dependencies": {
@@ -34,10 +38,14 @@
     "@schematics/angular": "^8.3.9",
     "@schematics/update": "^0.803.9",
     "angular-bootstrap-md": "^8.3.1",
+    "angular2-toaster": "^8.0.0",
     "angularfire2": "^5.2.1",
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "core-js": "^3.2.1",
+    "engines": "^0.4.0",
+    "express": "^4.17.1",
     "firebase": "^6.3.5",
     "font-awesome": "^4.7.0",
     "g": "^2.0.1",
@@ -45,16 +53,24 @@
     "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^1.5.3",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "ngx-content-loading": "^0.1.3",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-pagination": "^4.1.0",
     "ngx-toastr": "^11.1.0",
+    "node-sass": "^4.13.0",
+    "owl.carousel": "^2.3.4",
     "popper.js": "^1.15.0",
+    "primeng": "^8.1.1",
     "rxjs": "~6.4.0",
-    "rxjs-compat": "^6.5.2",
+    "rxjs-compat": "^6.5.3",
+    "shortid": "^2.2.15",
     "tether": "^1.4.7",
+    "toastr": "^2.1.4",
     "toastr-min": "^1.0.0",
     "tslib": "^1.10.0",
+    "web-animations-js": "^2.3.2",
     "web-webpack-plugin": "^4.6.6",
     "zone.js": "~0.9.1"
   },
