--- a/drehendz/package.json
+++ b/drehendz/package.json
@@ -52,6 +52,7 @@
     "geofire": "^5.0.1",
     "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-rc.5",
+    "jquery": "^3.4.1",
     "jspdf": "^1.5.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
