update redirect on firebase json

--- a/drehendz/firebase.json
+++ b/drehendz/firebase.json
@@ -1,16 +1,28 @@
 {
   "hosting": {
+
     "public": "dist/drehendz",
+
     "ignore": [
       "firebase.json",
       "**/.*",
-      "**/node_modules/**"
+      "**/node_modules/**" 
     ],
+
+
     "rewrites": [
       {
         "source": "**",
         "destination": "/index.html"
       }
-    ]
+     ],
+
+
+    "redirects": [
+      {
+        "source": "/firebase/**",
+        "destination": "https://firebase.google.com/"
+    }
+  ]
   }
 }
