--- a/drehendz/package.json
+++ b/drehendz/package.json
@@ -36,7 +36,7 @@
     "@ngrx/store-devtools": "^8.2.0",
     "@reactivex/rxjs": "^5.0.0-beta.1",
     "@schematics/angular": "^8.3.9",
-    "@schematics/update": "^0.803.9",
+    "@schematics/update": "^0.901.0",
     "angular-bootstrap-md": "^8.3.1",
     "angular2-toaster": "^8.0.0",
     "angularfire2": "^5.2.1",
@@ -76,9 +76,9 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.23",
-    "@angular/cli": "~8.2.0",
-    "@angular/compiler-cli": "~8.2.0",
+    "@angular-devkit/build-angular": "^0.901.0",
+    "@angular/cli": "^9.1.0",
+    "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "~8.2.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
@@ -86,13 +86,13 @@
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
+    "ts-node": "^8.8.1",
     "tslint": "~5.15.0",
     "typescript": "^3.5.3"
   }
