--- a/drehendz/package.json
+++ b/drehendz/package.json
@@ -58,6 +58,7 @@
     "moment": "^2.24.0",
     "ngx-content-loading": "^0.1.3",
     "ngx-owl-carousel": "^2.0.7",
+    "ngx-owl-carousel-o": "^3.0.0",
     "ngx-pagination": "^4.1.0",
     "ngx-toastr": "^11.1.0",
     "node-sass": "^4.13.1",
