--- a/drehendz/package.json
+++ b/drehendz/package.json
@@ -52,7 +52,7 @@
     "geofire": "^5.0.1",
     "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-rc.5",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "jspdf": "^1.5.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
@@ -61,7 +61,7 @@
     "ngx-owl-carousel-o": "^3.0.0",
     "ngx-pagination": "^4.1.0",
     "ngx-toastr": "^11.1.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.15.0",
     "primeng": "^8.1.1",
@@ -77,7 +77,7 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.0",
+    "@angular-devkit/build-angular": "^0.901.7",
     "@angular/cli": "^9.1.0",
     "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "~9.1.0",
@@ -87,12 +87,12 @@
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
+    "karma": "^5.0.9",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "protractor": "^7.0.0",
     "ts-node": "^8.8.1",
     "tslint": "~5.15.0",
     "typescript": "^3.8.3"
